front, back: Add kicking out group member function

--- a/templates/token_modals.html
+++ b/templates/token_modals.html
@@ -23,7 +23,7 @@
     class="px-6 py-4 bg-white rounded-t-lg dark:bg-gray-800 sm:rounded-lg sm:m-4"
     role="dialog"
     id="modal"
-    style="width: 860px; max-height: 700px; overflow:scroll;"
+    style="width: 860px; height: 700px; overflow:scroll;"
   >
     <!-- Remove header if you don't want a close icon. Use modal body to place modal tile. -->
     <header class="flex justify-end">
